--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,38 @@
 /styles.scss
 /styles.css
 /styles.css.map
-/fonts/Inter Web/Inter-BoldItalic.woff
-/fonts/Inter Web/Inter-Thin.woff
-/fonts/Inter Web/Inter-Italic.woff2
-/fonts/Inter Web/Inter-Italic.woff
-/fonts/Inter Web/Inter-MediumItalic.woff
-/fonts/Inter Web/Inter-MediumItalic.woff2
-/fonts/Inter Web/Inter-BoldItalic.woff2
-/fonts/Inter Web/Inter-SemiBoldItalic.woff
-/fonts/Inter Web/Inter-ExtraBold.woff
-/fonts/Inter Web/Inter-ExtraLight.woff2
-/fonts/Inter Web/Inter-ExtraBoldItalic.woff
-/fonts/Inter Web/Inter-ThinItalic.woff
-/fonts/Inter Web/Inter-Bold.woff
-/fonts/Inter Web/Inter-SemiBold.woff2
-/fonts/Inter Web/Inter-ExtraLightItalic.woff
-/fonts/Inter Web/Inter-ExtraLight.woff
-/fonts/Inter Web/Inter-LightItalic.woff
-/fonts/Inter Web/Inter-ExtraBoldItalic.woff2
-/fonts/Inter Web/Inter-italic.var.woff2
-/fonts/Inter Web/Inter-BlackItalic.woff
-/fonts/Inter Web/Inter-Light.woff
-/fonts/Inter Web/Inter-ThinItalic.woff2
-/fonts/Inter Web/Inter-Light.woff2
-/fonts/Inter Web/Inter-SemiBold.woff
-/fonts/Inter Web/Inter-Thin.woff2
-/fonts/Inter Web/Inter-BlackItalic.woff2
-/fonts/Inter Web/Inter.var.woff2
-/fonts/Inter Web/Inter-ExtraBold.woff2
-/fonts/Inter Web/Inter-roman.var.woff2
-/fonts/Inter Web/Inter-SemiBoldItalic.woff2
-/fonts/Inter Web/Inter-LightItalic.woff2
-/fonts/Inter Web/Inter-ExtraLightItalic.woff2
-/fonts/Inter Web/Inter-Bold.woff2
+/src/fonts/Inter Web/Inter-BoldItalic.woff
+/src/fonts/Inter Web/Inter-Thin.woff
+/src/fonts/Inter Web/Inter-Italic.woff2
+/src/fonts/Inter Web/Inter-Italic.woff
+/src/fonts/Inter Web/Inter-MediumItalic.woff
+/src/fonts/Inter Web/Inter-MediumItalic.woff2
+/src/fonts/Inter Web/Inter-BoldItalic.woff2
+/src/fonts/Inter Web/Inter-SemiBoldItalic.woff
+/src/fonts/Inter Web/Inter-ExtraBold.woff
+/src/fonts/Inter Web/Inter-ExtraLight.woff2
+/src/fonts/Inter Web/Inter-ExtraBoldItalic.woff
+/src/fonts/Inter Web/Inter-ThinItalic.woff
+/src/fonts/Inter Web/Inter-Bold.woff
+/src/fonts/Inter Web/Inter-SemiBold.woff2
+/src/fonts/Inter Web/Inter-ExtraLightItalic.woff
+/src/fonts/Inter Web/Inter-ExtraLight.woff
+/src/fonts/Inter Web/Inter-LightItalic.woff
+/src/fonts/Inter Web/Inter-ExtraBoldItalic.woff2
+/src/fonts/Inter Web/Inter-italic.var.woff2
+/src/fonts/Inter Web/Inter-BlackItalic.woff
+/src/fonts/Inter Web/Inter-Light.woff
+/src/fonts/Inter Web/Inter-ThinItalic.woff2
+/src/fonts/Inter Web/Inter-Light.woff2
+/src/fonts/Inter Web/Inter-SemiBold.woff
+/src/fonts/Inter Web/Inter-Thin.woff2
+/src/fonts/Inter Web/Inter-BlackItalic.woff2
+/src/fonts/Inter Web/Inter.var.woff2
+/src/fonts/Inter Web/Inter-ExtraBold.woff2
+/src/fonts/Inter Web/Inter-roman.var.woff2
+/src/fonts/Inter Web/Inter-SemiBoldItalic.woff2
+/src/fonts/Inter Web/Inter-LightItalic.woff2
+/src/fonts/Inter Web/Inter-ExtraLightItalic.woff2
+/src/fonts/Inter Web/Inter-Bold.woff2
+/node_modules/
+/dist/
